# babeltrace

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  ChangeLog  CodingStyle.md  Makefile.am  README.adoc  configure.ac  dev-requirements.txt  laurence.py  pyproject.toml  setup.cfg  std-ext-lib.md
.reuse/: dep5
doc/api/libbabeltrace2/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  README.adoc  style.css
doc/api/libbabeltrace2/dox/: api-fund.dox  examples.dox  group-trace-ir.dox  guides.dox  main-page.dox
doc/api/libbabeltrace2/examples/: distill.c  dust.c
doc/man/: README.adoc  asciidoc-attrs.conf.in  babeltrace2-convert.1.txt  babeltrace2-filter.lttng-utils.debug-info.7.txt  babeltrace2-filter.utils.muxer.7.txt  babeltrace2-filter.utils.trimmer.7.txt  babeltrace2-help.1.txt  babeltrace2-intro.7.txt  babeltrace2-list-plugins.1.txt  babeltrace2-plugin-ctf.7.txt  babeltrace2-plugin-lttng-utils.7.txt  babeltrace2-plugin-text.7.txt  babeltrace2-plugin-utils.7.txt  babeltrace2-query-babeltrace.support-info.7.txt  babeltrace2-query-babeltrace.trace-infos.7.txt  babeltrace2-query.1.txt  babeltrace2-run.1.txt  babeltrace2-sink.ctf.fs.7.txt  babeltrace2-sink.text.details.7.txt  babeltrace2-sink.text.pretty.7.txt  babeltrace2-sink.utils.counter.7.txt  babeltrace2-sink.utils.dummy.7.txt  babeltrace2-source.ctf.fs.7.txt  babeltrace2-source.ctf.lttng-live.7.txt  babeltrace2-source.text.dmesg.7.txt  babeltrace2.1.txt  bt-asciidoc.conf  common-cli-env.txt  common-cli-files.txt  common-cmd-footer.txt  common-cmd-info-options.txt  common-cmd-params-format.txt  common-common-env.txt  common-convert-examples.txt  common-footer.txt  common-gen-options.txt  common-lib-env.txt  common-log-levels.txt  common-see-babeltrace2-intro.txt  common-trimmer-time-format.txt  (+1 more)
include/babeltrace2/: babeltrace.h  error-reporting.h  func-status.h  logging-defs.h  logging.h  types.h  util.h  value.h  version.h
include/babeltrace2/graph/: component-class-dev.h  component-class.h  component-descriptor-set.h  component.h  graph.h  interrupter.h  message-iterator-class.h  message-iterator.h  message.h  port.h  private-query-executor.h  query-executor.h  self-component.h  self-message-iterator.h
include/babeltrace2/plugin/: plugin-dev.h  plugin-loading.h
src/: Makefile.am  gen-version-i.sh
src/cli/: babeltrace2.c
src/clock-correlation-validator/: clock-correlation-validator.cpp
src/cpp-common/bt2/: clock-class.hpp  (+8 more)
src/ctfser/: ctfser.h
src/fd-cache/: fd-cache.cpp
src/lib/: lib-logging.c
src/py-common/: py-common.cpp  py-common.hpp
tests/: Makefile.am
tests/cli/: test-exit-status.sh  test-help.sh  test-intersection.sh  test-output-ctf-metadata.sh  test-output-path-ctf-non-lttng-trace.sh  test-packet-seq-num.sh  test-trace-copy.sh  test-trace-read.sh  test-trimmer.sh
tests/ctf-writer/: ctf_writer.c
tests/lib/: Makefile.am  test_bt_values.c
tests/utils/: utils.sh
tools/: format-cpp.sh
(+223 files in other folders)
